--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Document</title>
   </head>
   <body>
+    <div class="calc-container">
+      <div class="display">54</div>
+      <div class="button-container">
+        <button class="one btn">1</button>
+        <button class="two btn">2</button>
+        <button class="three btn">3</button>
+        <button class="four btn">4</button>
+        <button class="five btn">5</button>
+        <button class="six btn">6</button>
+        <button class="seven btn">7</button>
+        <button class="eight btn">8</button>
+        <button class="nine btn">9</button>
+        <button class="zero btn">0</button>
+        <button class="minus btn">-</button>
+        <button class="plus btn">+</button>
+        <button class="multiply btn">*</button>
+        <button class="divide btn">/</button>
+        <button class="equal btn">=</button>
+        <button class="clear">C</button>
+      </div>
+    </div>
     <script rel="text/javascript" src="scripts/index.js"></script>
   </body>
 </html>
