fixed buttons to display on-screen

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <div class="calc-container">
       <div class="display">54</div>
       <div class="button-container">
-        <button class="one btn">1</button>
-        <button class="two btn">2</button>
-        <button class="three btn">3</button>
-        <button class="four btn">4</button>
-        <button class="five btn">5</button>
-        <button class="six btn">6</button>
-        <button class="seven btn">7</button>
-        <button class="eight btn">8</button>
-        <button class="nine btn">9</button>
-        <button class="zero btn">0</button>
+        <button class="one btn" value="1">1</button>
+        <button class="two btn" value="2">2</button>
+        <button class="three btn" value="3">3</button>
+        <button class="four btn" value="4">4</button>
+        <button class="five btn" value="5">5</button>
+        <button class="six btn" value="6">6</button>
+        <button class="seven btn" value="7">7</button>
+        <button class="eight btn" value="8">8</button>
+        <button class="nine btn" value="9">9</button>
+        <button class="zero btn" value="0">0</button>
         <button class="minus btn">-</button>
         <button class="plus btn">+</button>
         <button class="multiply btn">*</button>
