--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="calc-container">
-      <div class="display">54</div>
+      <div class="display"></div>
       <div class="button-container">
         <button class="one btn" value="1">1</button>
         <button class="two btn" value="2">2</button>
